==============
lxml changelog
==============

Latest changes
==================


Features added
--------------

* ``xmlfile()`` accepts a new argument ``close=True`` to close file(-like)
  objects after writing to them.

Bugs fixed
----------

Other changes
-------------

* Allow "bytearray" type for text input.

* Requires Python 2.6, 2.7, 3.2 or later. No longer supports
  Python 2.4, 2.5 and 3.1, use lxml 3.3.x for those.

* Requires libxml2 2.7.0 or later and libxslt 1.1.23 or later,
  use lxml 3.3.x with older versions.



3.3.4 (2014-04-03)
==================

Features added
--------------

* Source line numbers above 65535 are available on Elements when
  using libxml2 2.9 or later.

Bugs fixed
----------

* ``lxml.html.fragment_fromstring()`` failed for bytes input in Py3.

Other changes
-------------


3.3.3 (2014-03-04)
==================

Bugs fixed
----------

* LP#1287118: Crash when using Element subtypes with ``__slots__``.

Other changes
-------------

* The internal classes ``_LogEntry`` and ``_Attrib`` can no longer be
  subclassed from Python code.


3.3.2 (2014-02-26)
==================

Bugs fixed
----------

* The properties ``resolvers`` and ``version``, as well as the methods
  ``set_element_class_lookup()`` and ``makeelement()``, were lost from
  ``iterparse`` objects in 3.3.0.

* LP#1222132: instances of ``XMLSchema``, ``Schematron`` and ``RelaxNG``
  did not clear their local ``error_log`` before running a validation.

* LP#1238500: lxml.doctestcompare mixed up "expected" and "actual" in
  attribute values.

* Some file I/O tests were failing in MS-Windows due to non-portable temp
  file usage.  Initial patch by Gabi Davar.

* LP#910014: duplicate IDs in a document were not reported by DTD validation.

* LP#1185332: ``tostring(method="html")`` did not use HTML serialisation
  semantics for trailing tail text.  Initial patch by Sylvain Viollon.

* LP#1281139: ``.attrib`` value of Comments lost its mutation methods